--- a/styles/css.css
+++ b/styles/css.css
@@ -12,16 +12,22 @@
 /* GENERAL */
 .list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .button {
+  display: inline-block;
   font-family: inherit;
   letter-spacing: 0.04em;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   cursor: pointer;
-  border: none;
+  height: 48px;
+  padding: 12px 24px;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
 }
 
 body {
@@ -34,7 +40,30 @@ body {
   font-weight: 400;
 }
 
+.container {
+  width: 1128px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 12px;
+  padding-right: 12px;
+  margin-bottom: 120px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 /* HEADER */
+.container.cont-header {
+  margin-bottom: 0;
+}
+
 .logo,
 .logo:visited {
   font-family: "Raleway";
@@ -81,18 +110,33 @@ body {
 
 /* BODY */
 /* HERO */
+.hero.container {
+  height: 600px;
+  width: auto;
+  padding: 188px;
+  background-color: var(--dark-color);
+}
+
 .hero .title {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   color: var(--basic-white);
   /* тимчасово */
-  background-color: var(--dark-color);
+  width: 496px;
+  margin: 0 auto 48px auto;
 }
+
 .hero .button {
+  display: block;
   color: var(--basic-white);
   background-color: var(--primary-brand);
+  padding: 16px 32px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  min-width: 169px;
+  height: 56px;
+  margin: 0 auto;
+  border: none;
 }
 .hero .button:hover,
 .hero .button:focus {
@@ -109,6 +153,7 @@ body {
   line-height: 1.11;
   text-align: center;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .advantages .title-second,
@@ -119,6 +164,17 @@ body {
   font-size: 20px;
   line-height: 1.2;
   color: var(--dark-color);
+  margin-bottom: 8px;
+}
+
+/* TEAM */
+.section.team {
+  background-color: var(--alt-white);
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.container.team {
+  margin-bottom: 0;
 }
 
 /* FOOTER */
@@ -147,4 +203,7 @@ body {
 .projects .button:focus {
   color: var(--basic-white);
   background-color: var(--pressed-state);
+  border-color: transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
