--- a/styles/css.css
+++ b/styles/css.css
@@ -173,19 +173,32 @@ p {
   padding-top: 120px;
   padding-bottom: 120px;
 }
-.container.team {
+.team .container {
   margin-bottom: 0;
 }
 
 /* FOOTER */
 .logo-footer {
+  display: inline-block;
   color: var(--basic-white);
+  margin-bottom: 16px;
 }
 .footer {
+  height: 310px;
   background-color: var(--dark-color);
 }
 .text-footer {
   color: var(--alt-white);
+}
+
+.footer .container {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  margin-bottom: 0;
+}
+
+.footer p {
+  width: 264px;
 }
 
 /* PORTFOLIO */
