--- a/styles/css.css
+++ b/styles/css.css
@@ -10,24 +10,20 @@
 }
 
 /* GENERAL */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 .list {
   list-style: none;
   padding: 0;
   margin: 0;
-}
-
-.button {
-  display: inline-block;
-  font-family: inherit;
-  letter-spacing: 0.04em;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  cursor: pointer;
-  height: 48px;
-  padding: 12px 24px;
-  border: 1px solid #e7e9fc;
-  border-radius: 4px;
 }
 
 body {
@@ -40,6 +36,19 @@ body {
   font-weight: 400;
 }
 
+.button {
+  display: inline-block;
+  font-family: inherit;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  cursor: pointer;
+  padding: 12px 24px;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+}
+
 .container {
   width: 1128px;
   margin-left: auto;
@@ -47,16 +56,6 @@ body {
   padding-left: 12px;
   padding-right: 12px;
   margin-bottom: 120px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
 }
 
 /* HEADER */
@@ -115,6 +114,7 @@ p {
   width: auto;
   padding: 188px;
   background-color: var(--dark-color);
+  text-align: center;
 }
 
 .hero .title {
@@ -123,19 +123,16 @@ p {
   line-height: 1.07;
   color: var(--basic-white);
   /* тимчасово */
-  width: 496px;
-  margin: 0 auto 48px auto;
+  margin-bottom: 48px;
 }
 
 .hero .button {
-  display: block;
   color: var(--basic-white);
   background-color: var(--primary-brand);
   padding: 16px 32px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   min-width: 169px;
-  height: 56px;
-  margin: 0 auto;
+  /* height: 56px; */
   border: none;
 }
 .hero .button:hover,
@@ -195,10 +192,6 @@ p {
   padding-top: 100px;
   padding-bottom: 100px;
   margin-bottom: 0;
-}
-
-.footer p {
-  width: 264px;
 }
 
 /* PORTFOLIO */
