--- a/styles/css.css
+++ b/styles/css.css
@@ -20,6 +20,11 @@ p {
   margin: 0;
 }
 
+/* ТИМЧАСОВО СКРИТІ ЗАГОЛОВКИ таким способом */
+.title-invis {
+  display: none;
+}
+
 .list {
   list-style: none;
   padding: 0;
@@ -50,7 +55,7 @@ body {
 }
 
 .container {
-  width: 1128px;
+  width: 1158px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -183,9 +188,11 @@ body {
 }
 
 /* SECTIONS */
-.advantages .title,
+/* .advantages .title,
 .works .title,
-.team .title {
+.team .title  */
+
+.title {
   color: var(--dark-color);
   font-weight: 700;
   font-size: 36px;
@@ -195,15 +202,39 @@ body {
   margin-bottom: 72px;
 }
 
-.advantages .title-second,
+/* .advantages .title-second,
 .works .title-second,
 .team .title-second,
-.projects .title-second {
+.projects .title-second  */
+
+.title-second {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   color: var(--dark-color);
   margin-bottom: 8px;
+}
+
+/* ADVANTAGES */
+.advant-flex {
+  display: flex;
+}
+
+.advant-item {
+  width: calc((100% - 72px) / 4);
+}
+
+.advant-flex .advant-item:not(:last-child) {
+  margin-right: 24px;
+}
+
+/* WORKS */
+.works-flex {
+  display: flex;
+}
+
+.works-flex .works-item:not(:last-child) {
+  margin-right: 24px;
 }
 
 /* TEAM */
@@ -214,6 +245,27 @@ body {
 }
 .team .container {
   margin-bottom: 0;
+}
+
+.team .title-second {
+  margin-top: 32px;
+}
+
+.team-flex {
+  display: flex;
+}
+
+.team-flex .team-item {
+  height: 380px;
+  text-align: center;
+  background-color: var(--basic-white);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-flex .team-item:not(:last-child) {
+  margin-right: 24px;
 }
 
 /* FOOTER */
@@ -228,6 +280,7 @@ body {
 }
 .text-footer {
   color: var(--alt-white);
+  width: 264px;
 }
 
 .footer .container {
@@ -242,10 +295,10 @@ body {
   background-color: var(--alt-white);
 }
 
-.projects .text-card {
+/* .projects .text-card {
   color: var(--alt-white);
   background-color: var(--primary-brand);
-}
+} */
 
 .projects .button:hover,
 .projects .button:focus {
@@ -254,4 +307,48 @@ body {
   border-color: transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.projects.container {
+  margin-top: 96px;
+}
+
+.projects-flex .projects-item {
+  height: 420px;
+  width: 360px;
+  border: 1px solid #e7e9fc;
+}
+
+.projects :is(.title-second, .projects-text) {
+  padding-left: 12px;
+}
+
+.projects .title-second {
+  margin-top: 32px;
+}
+
+.buttons-flex {
+  margin-bottom: 72px;
+}
+
+.buttons-flex {
+  display: flex;
+  justify-content: center;
+}
+
+.buttons-flex .button-item:not(:last-child) {
+  margin-right: 24px;
+}
+
+.projects-flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.projects-flex .projects-item:not(:nth-child(3n)) {
+  margin-right: 24px;
+}
+
+.projects-flex .projects-item:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 48px;
 }
